Updated puzzle_pieces, fixed some layout bugs

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1559,7 +1559,8 @@ a img {
     -webkit-box-flex: 1;
     -webkit-flex-grow: 1;
     -ms-flex-positive: 1;
-    flex-grow: 1; }
+    flex-grow: 1;
+    width: 100%; }
   .puzzle-features .icon-column .column-inner ul {
     margin-left: 0;
     padding: 0 1rem;
@@ -1598,6 +1599,7 @@ a img {
     height: 400px;
     padding-top: 50px;
     background-position: center;
+    background-repeat: no-repeat;
     background-size: cover;
     text-align: center; }
     .puzzle-header .header-content .header-content-inner {
