--- a/assets/scss/_partials/_puzzle-header.scss
+++ b/assets/scss/_partials/_puzzle-header.scss
@@ -13,6 +13,7 @@
         height: 400px;
         padding-top: 50px;
         background-position: center;
+        background-repeat: no-repeat;
         background-size: cover;
         text-align: center;
         
